# jsi-basics

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-basics.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/jsibasics/: JsiBasicsModule.java  JsiBasicsPackage.java
cpp/: MyObject.cpp  MyObject.h  react-native-jsi-basics.cpp  react-native-jsi-basics.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/jsibasicsexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/JsiBasicsExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/JsiBasicsExample.xcodeproj/: project.pbxproj
example/ios/JsiBasicsExample.xcodeproj/xcshareddata/xcschemes/: JsiBasicsExample.xcscheme
example/ios/JsiBasicsExample.xcworkspace/: contents.xcworkspacedata
example/ios/JsiBasicsExampleTests/: JsiBasicsExampleTests.m
example/src/: App.tsx
ios/: JsiBasics.h  JsiBasics.mm
src/: NativeJsiBasics.ts  index.ts  index.tsx
